app/assets/stylesheets/main.css.scss
@import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400,700);

$red: rgb(133, 33, 33);
$blue: #003C78;

@mixin defaultFont(){
  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
}

/*
 Backend
*/

#login-form{
  margin-top: 100px;
}

/*
  Main site
*/

body{
  ul{
    list-style-type: none;
    margin: 0;
    padding: 0;
  }
}

#siteTitle{
  position: fixed;
  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
  font-weight: bold;
  -ms-transform: rotate(270deg); /* IE 9 */
  -webkit-transform: rotate(270deg); /* Chrome, Safari, Opera */
  transform: rotate(270deg);
  text-transform: uppercase;
  left: -390px;
  top: 50%;
  margin: 0;
  text-align: center;

  img{
    width: 50%;
    image-rendering: optimizeSpeed;             /* FUCK SMOOTHING, GIVE ME SPEED  */
    image-rendering: -moz-crisp-edges;          /* Firefox                        */
    image-rendering: -o-crisp-edges;            /* Opera                          */
    image-rendering: -webkit-optimize-contrast; /* Chrome (and eventually Safari) */
    image-rendering: optimize-contrast;         /* CSS3 Proposed                  */
    -ms-interpolation-mode: nearest-neighbor;   /* IE8+                           */
  }

  a{
    text-decoration: none;
    color: black;

    &:hover, &:active, &:focus{
      color: black;
      text-decoration: none;
    }
  }
}

#wrapper{
  width: 960px;
  margin: 0 auto;
  position: relative;
}

.contentImg{
  width: 100%;
}

#left{
  width: 50%;
  position: absolute;
  left: 0;
  color: #202020;
  font-family: Georgia, serif;

  .mobile-only{
    display: none;
    @media screen and (max-width: 1200px){
      display: block;
    }
  }

  .desktop-only{
    display: block;
    @media screen and (max-width: 1200px){
      display: none;
    }
  }

}

#right{
  width: 480px;
  position: fixed;
  margin-left: 480px;
  color: #202020;
  bottom: 0;
  font-family: Georgia, serif;
  @media screen and (max-width: 1200px){
    display: none;
  }
}

.pic{
  img{
    width: 100%;
  }
}

section{
  text-align: center;
  margin: 0 10px 20px;
  background-position: center center;
  background-size: cover;
  background-repeat: no-repeat;
  font-weight: lighter;

  h2{
    color: white;
    text-align: center;
    text-transform: uppercase;
    padding: 40px 0;
  }

  .content{
    padding: 40px;

    @media screen and (max-width: 1200px){
      padding: 20px;
    }
  }

  &.textSection{
    overflow: auto;
    
    &:before{
      content: '';
      display: inline-block;
      height: 100%; 
      vertical-align: middle;
    }

    .centered{
      display: inline-block;
      vertical-align: middle;
      width: 98%;
    }
  }

  &.welcome{
    margin-bottom: 20px;

    &.left{
      margin-top: 20px;
      background-image: url('/assets/home1.jpg');
    }
    &.right{
      background-image: url('/assets/home2.jpg');
    }
  }

  &.listen{
    background-color: white;

    h2{
      color: black;
    }

    &.left{
      background-image: url('/assets/listen.jpg');
    }

    &.right{
      h5{
        margin-bottom: 40px;
      }
      ul{
        li{
          display: inline-block;
        }
      }

      .album{
        width: 100%;
      }

      .links{
        padding: 20px 0;

        a{
          color: black;
          padding: 0 20px;
        }
      }

      .videos{
        font-size: 0;
        li{
          width: 33.3333%;

          &:first-child{
            text-align: left;
          }

          &:last-child{
            text-align: right;
          }

          img{
            width: 95%;
          }
        }
      }
    }
  }

  &.news{

    background-color: $blue;
    color: white;
    overflow-y: auto;

    .content{
      height: 100%;

      @media screen and (max-width: 1200px){
        padding: 20px;
      }
    }

    .slider{
      padding-left: 0;
      padding-right: 0;
      position: relative;
      height: auto;

      ul{
        height: auto;
        overflow-y: auto;

        li{
          height: auto;
          padding: 20px;
          padding-bottom: 40px;
          float: left;
          text-align: left;

          @media screen and (max-width: 1200px){
            padding: 0px;
          }
        }
      }
    }

    .dots{
      list-style-type: none;
      padding: 0px;
      top: -8px;
      position: absolute;
      width: 100%;
      
      .dot{
        display: inline-block;
        padding: 0 10px;
        cursor: pointer;

        &.active{
          color: #AAA;
        }
      }
    }

    &.left{
      
    }

    &.right{
      background-image: url('/assets/news.jpg');
    }

    h3{
      font-weight: normal;
      padding: 0 0 10px;
      text-transform: uppercase;
      letter-spacing: 1px;
      margin-top: 0;

      @media screen and (max-width: 1200px){
        padding: 0 0 10px;
      }
    }

    small{
      color: white;
      text-transform: uppercase;
      letter-spacing: 1px;
    }

    p{
      margin-top: 20px;
      margin-bottom: 0px;
      letter-spacing: 1px;
      line-height: 2;
      font-size: 16px;

      a{
        text-decoration: underline;
        color: white;
      }
    }
  }

  &.gigs{
    color: black;

    &.left{
      background-image: url('/assets/live.jpg');
    }
    
    &.right{
      background-color: white;
    }
    
    li{
      font-size: 18px;
      padding: 15px 0;
    }
  }

  &.info{
    color: white;
    overflow: auto;
    
    &.left{
      background-color: $blue;
    }

    &.right{
      background-image: url('/assets/about.jpg');
    }

    p{
      margin-top: 20px;
      margin-bottom: 40px;
      letter-spacing: 1px;
      line-height: 2;
      font-size: 16px;
      text-align: left;

      &.cite{
        text-align: right;
      }
    }
  }

  &.contact{
    h2{
      color: black;
    }

    &.left{
      background-image: url('/assets/contact.jpg');
    }

    &.right{
      
    }

    p{
      margin-top: 20px;
      margin-bottom: 40px;
      letter-spacing: 1px;
      line-height: 1.2;
      font-size: 16px;

      @media screen and (max-width: 1200px){
        margin-top: 10px;
        margin-bottom: 0px;
      }
    }

    .film{
      margin: 0 auto 40px;
      width: 100px;

      img{
        width: 100%;
      }
    }

    li{
      h4{
        text-decoration: underline;
        font-weight: bold;
      }

      a{
        color: black;

        &:hover{
          text-decoration: underline;
        }
      }
    }
  }

}

/*
 * Navigation
 */

nav{
  position: fixed;
  right: -170px;
  top: calc(50% - 37px);
  z-index: 2;
  width: 510px;
  transform: rotate(90deg);
  -webkit-transform: rotate(90deg);
  -moz-transform: rotate(90deg);

  ul{
    padding: 0;
    margin: 0;
    text-transform: uppercase;

    li{
      display: inline-block;
      transition: .4s all ease;
      opacity: 0;
      transform: translateY(-50px);
      cursor: pointer;
      height: 65px;

      &.nav-news{
        text-align: right;
      }

      &.nav-info{
        text-align: center;
      }

      &.nav-music{
        text-align: left;
      }

      &.nav-live{
        text-align: right;
      }

      &.nav-contact{
        text-align: left;
      }

      img{
        height: 90%;
        image-rendering: optimizeSpeed;             /* FUCK SMOOTHING, GIVE ME SPEED  */
        image-rendering: -moz-crisp-edges;          /* Firefox                        */
        image-rendering: -o-crisp-edges;            /* Opera                          */
        image-rendering: -webkit-optimize-contrast; /* Chrome (and eventually Safari) */
        image-rendering: optimize-contrast;         /* CSS3 Proposed                  */
        -ms-interpolation-mode: nearest-neighbor;   /* IE8+                           */
      }

      &.visible{
        opacity: 1;
        transform: translateY(0);
      }
    }
  }
}

.mobile-nav{
  display: none;
}

/*
 * Loading
 */

#loading{
  background-color: white;
  height: 100%;
  width: 100%;
  position: fixed;
  z-index: 3;
}

/*
 * Media Queries
 */

// Big screen
@media screen and (min-width: 1600px){
  #wrapper{
    width: 1280px;
  }

  #right{
    width: 640px;
    margin-left: 640px;
  }

  nav{
    display: block !important;
  }
}

// Tablet
@media screen and (max-width: 1200px){
  #wrapper{
    width: 100%;

    #left, #right{
      width: 100%;
      position: static;
    }

    #right{
      margin-left: 0;
    }
  }

  section{
    margin: 0 10px 10px;

    &.welcome{
      margin-bottom: 10px;
      &.left{
        margin-top: 10px;
      }
    }
  }

  nav{
    display: none !important;
    top: 0;
    width: 100%;
    right: 0;
    -ms-transform: rotate(0deg);
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
    background-color: rgba(255,255,255,1);
  }

  #siteTitle{
    display: none;
  }

  .mobile-nav{
    display: block;
    position: fixed;
    bottom: 0;
    width: 100%;
    background-color: white;
    padding: 10px;
    z-index: 10;

    ul{
      list-style-type: none;
      text-align: center;

      li{
        display: inline-block;
        font-family: sans-serif;
        font-weight: bold;
        width: 100px;
        
        &:nth-child(1){ width: 87px; }
        &:nth-child(2){ width: 79px; }
        &:nth-child(3){ width: 99px; }
        &:nth-child(4){ width: 77px; }
        &:nth-child(5){ width: 137px; }

        img{
          width: 100%;
        }
      }
    }
  }
}

